--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ Thumbs.db
 *-debug.log
 .runtimeconfig.json
 
-
+.env
 /src/environments/
 /src/environments/environment.ts
 /src/environments/environment.development.ts
