--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
+    "@ngx-env/builder": "^19.0.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/jasmine": "~5.1.0",
     "@types/xlsx": "^0.0.35",
